--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-typescript": "^7.15.0",
         "@types/node": "^16.7.10",
-        "@types/three": "0.135.0",
+        "@types/three": "^0.135.0",
         "@typescript-eslint/parser": "^4.14.0",
         "babel-jest": "^25.5.1",
         "esbuild": "^0.12.25",
